Improved support for non-Windows operating systems

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-acrylic-window",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "description": "Add vibrancy effect for electron",
   "main": "index.js",
   "keywords": [
@@ -34,11 +34,11 @@
   "gypfile": true,
   "dependencies": {
     "bindings": "^1.5.0",
-    "node-gyp": "^7.0.0",
+    "display-info": "git+https://github.com/rsispal/display-info.git",
     "node-addon-api": "^3.0.0",
-    "display-info": "^0.0.1"
+    "node-gyp": "^7.1.0"
   },
   "devDependencies": {
-    "electron": "^9.1.1"
+    "electron": "^9.2.0"
   }
 }
